# linuxloader

./: CMakeLists.txt  Makefile  README.md  mingw32.cmake
.github/workflows/: linux-build.yml  main.yml  windows-build.yml
docs/: changelog  guide-linux.md  guide-windows.md
libs/linux_x86/: libSDL3.so.0  libSDL3_image.so.0  libSDL3_ttf.so.0
libs/win32/ll-deps/: libpcsclite.so.1  libstdc++.so.6
scripts/: linuxloader.desktop
scripts/appimage/: build-deps.sh  id-libs.sh  install-kisak.sh  install-packages.sh  make-appimage.sh
scripts/windows/: install-packages.sh  windows-build.bat  windows-build.sh
src/glad/include/glad/: gl.h
src/loader/: init.c  init.h  linuxExe.c  mainL.c  mainShared.c  mainShared.h  mainW.cpp
src/loader/audio/lindbergh/alsa2sdl/: alsa2sdl.c  alsa2sdl.h
src/loader/audio/lindbergh/libsegaapi/: libsegaapi.c  libsegaapi.h
src/loader/config/: config.c  config.h  configIni.c  configIni.h  gameData.c  iniParser.c
src/loader/elfLoader/: alsa2sdlBridge.cpp  alsa2sdlBridge.hpp  cppBridge.cpp  cppBridge.hpp  elfLoader.cpp  elfLoader.hpp  filesystemBridge.cpp  filesystemBridge.hpp  gccBridge.cpp  gccBridge.hpp  glHooks.cpp  glHooks.hpp  graphicsBridge.cpp  graphicsBridge.hpp  ipcBridge.cpp  ipcBridge.hpp  libcBridge.cpp  libcBridge.hpp  linuxStack.cpp  linuxStack.hpp  memoryManager.cpp  memoryManager.hpp  networkBridge.cpp  networkBridge.hpp  pthreadBridge.cpp  pthreadBridge.hpp  regexBridge.cpp  regexBridge.hpp  segaapiBridge.cpp  segaapiBridge.hpp  symbolResolver.cpp  symbolResolver.hpp  termiosBridge.cpp  termiosBridge.hpp
src/loader/elfLoader/pthread/: pthreadBarrier.cpp  pthreadCond.cpp  pthreadEmu.cpp  pthreadEmu.hpp  pthreadInternal.hpp  pthreadMapper.cpp  pthreadMutex.cpp  pthreadOnce.cpp  pthreadRwlock.cpp  pthreadSemaphore.cpp  pthreadSpin.cpp  pthreadThread.cpp  pthreadTls.cpp
src/loader/extraLibs/lindbergh/libkswapapi/: libkswapapi.c  libkswapapi.h
src/loader/graphics/: bezel.c  bezel.h  blitStretching.c  blitStretching.h  border.c  border.h  crossHair.c  crossHair.h  customCursor.c  fpsLimiter.c  glutBridge.c  glutBridge.h  glxBridge.c  glxBridge.h  gpuVendor.c  sdlCalls.c  sdlCalls.h  shaderCache.c  shaderCache.h  shaderPatches.c  shaderPatches.h  x11Bridge.c  x11Bridge.h  x11types.h
src/loader/graphics/shaderWork/: harley.c  hod4.c  hodex.c  id.c  id.h  lgj.c  primeval.c  rambo.c
src/loader/hardware/lindbergh/: baseBoard.c  baseBoard.h  cardReader.c  cardReader.h  driveBoard.c  driveBoard.h  eeprom.c  eeprom.h  eepromSettings.c  forceFeedback.c  forceFeedback.h  jvs.c  jvs.h  output.c  output.h  passthrough.c  passthrough.h  securityBoard.c  touchScreen.c  touchScreen.h
src/loader/input/: controlIniGen.c  controlIniGen.h  evdevInput.c  evdevInput.h  sdlInput.c  sdlInput.h  wiimoteEvdev.c  wiimoteEvdev.h
src/loader/log/: log.c  log.h
src/loader/patching/: flowControl.c  flowControl.h  patch.c  patch.h  patchNetwork.c  patchNetwork.h  patchResolution.c  patchResolution.h
src/loader/redirections/: filesystemShared.c  filesystemShared.h  libcShared.c  libcShared.h  memory.c  memory.h  termios.c  termios.h
src/loader/resources/: icon.h  icon.rc  lindberghLogo.h
src/minhook/include/: MinHook.h
src/minhook/src/: buffer.c  buffer.h  hook.c  trampoline.c  trampoline.h
src/minhook/src/hde/: pstdint.h
